<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/title_help_about_us"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kik="http://schemas.android.com/apk/res-auto">
    <kik.android.widget.preferences.TOSPreference android:enabled="true" android:title="@string/title_terms_of_service" android:key="kik.privacy.terms.of.service" kik:pref_divider="none" />
    <kik.android.widget.preferences.PrivacyPolicyPreference android:enabled="true" android:title="@string/title_privacy_policy" android:key="kik.privacy.policy" kik:pref_divider="top" />
    <kik.android.widget.preferences.CommunityGuideLinesPreference android:enabled="true" android:title="@string/title_community_guidelines" android:key="kik.community.guidelines" kik:pref_divider="top">
        <intent android:action="android.intent.action.VIEW" android:data="@string/web_kik_community_guidelines" />
    </kik.android.widget.preferences.CommunityGuideLinesPreference>
    <kik.android.widget.preferences.HelpPreference android:enabled="true" android:title="@string/title_help" android:key="kik.help" kik:pref_divider="top">
        <intent android:action="android.intent.action.VIEW" android:data="@string/web_kik_support" />
    </kik.android.widget.preferences.HelpPreference>
    <kik.android.widget.preferences.LicensePreference android:enabled="true" android:title="@string/title_licenses" android:key="kik.licenses" kik:pref_divider="top" />
    <kik.android.widget.preferences.DeveloperModePreference android:enabled="true" android:title="@string/title_developer_mode" android:key="kik.developer.mode" android:summary="@string/summary_developer" kik:pref_divider="full_bottom" />
    <night.PseudoLegal android:enabled="true" android:title="@string/title_copyright" />
</PreferenceScreen>