<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/title_notifications" android:key="@string/title_notifications"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kik="http://schemas.android.com/apk/res-auto">
    <night.Empty />
    <kik.android.widget.preferences.NotifySoundPreference android:enabled="true" android:title="@string/title_sound" android:key="kik.sound" kik:pref_divider="none" kik:icon="@drawable/ic_volume_up_black_24dp" />
    <kik.android.widget.preferences.VibratePreference android:enabled="true" android:title="@string/title_vibration" android:key="kik.vibrate" kik:pref_divider="top" />
    <kik.android.widget.preferences.NotifyNewPeoplePreference android:enabled="true" android:title="@string/title_mute_new_chats" android:key="kik.new.people.notify" kik:pref_divider="full_bottom|top" />
    <kik.android.widget.preferences.LEDNotificationPreference android:enabled="true" android:entries="@array/led_colors" android:title="@string/title_led_color" android:key="kik.led.color" android:entryValues="@array/led_values" kik:pref_divider="top" />
</PreferenceScreen>